k8s/manifests/sonarr-anime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-anime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr-anime
  template:
    metadata:
      labels:
        app: sonarr-anime
    spec:
      containers:
        - name: sonarr-anime
          image: ghcr.io/linuxserver/sonarr:4.0.19
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: tv
              mountPath: /tv
              subPath: anime/tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-anime-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: tv
          persistentVolumeClaim:
            claimName: media
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
