k8s/manifests/sonarr-anime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
spec:
  type: ClusterIP
  selector:
    app: sonarr-anime
  ports:
    - port: 8989
      targetPort: 8989
