k8s/manifests/sonarr-anime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: zerossl-cloudflare-dns01
  name: sonarr-anime
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr-anime.internal.chaldea.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-anime
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr-anime.internal.chaldea.dev
      secretName: sonarr-anime-tls
